--- a/wp/wp-content/themes/lgm2018/sass/regions/_sidebar.sass
+++ b/wp/wp-content/themes/lgm2018/sass/regions/_sidebar.sass
@@ -4,3 +4,4 @@
   position: fixed
   right: $m
   top: $m*4.5
+  z-index: 10000
